<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/spacing_xsmall">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/movie_img_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/movie_image"
            android:scaleType="centerCrop"
            android:transitionName="@string/poster" />

        <TextView
            android:id="@+id/movie_title_txt_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/black_semi_transparent"
            android:padding="@dimen/spacing_medium"
            android:textColor="@android:color/white"
            android:textSize="@dimen/movie_text_size"
            android:textStyle="bold"
            android:transitionName="@string/title" />
    </RelativeLayout>

</android.support.v7.widget.CardView>